GPU subdivision causes problems in generated Texture Coordinate with Cycles #96596

Closed
opened 2022-03-18 14:22:53 +01:00 by Bjorn van der Scheer · 18 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: None, since this is a new feature

Short description of error
In combination with some modifiers (like Armature or Cast), GPU Accelerated Subdivision breaks the Generated Texture Coordinate

Exact steps for others to reproduce the error

  • Open attached .blend file

  • Turn on GPU Subdivision in Preferences > Viewport

  • turn on Cycles or Eevee Rendered Shading (both will generate different problems)

  • GPU Subdivision Bug.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: None, since this is a new feature **Short description of error** In combination with some modifiers (like Armature or Cast), GPU Accelerated Subdivision breaks the Generated Texture Coordinate **Exact steps for others to reproduce the error** * Open attached .blend file * Turn on GPU Subdivision in Preferences > Viewport * turn on Cycles or Eevee Rendered Shading (both will generate different problems) * [GPU Subdivision Bug.blend](https://archive.blender.org/developer/F12933342/GPU_Subdivision_Bug.blend)

Added subscriber: @bjen

Added subscriber: @bjen

This issue was referenced by 342e12d6d9

This issue was referenced by 342e12d6d92198bba8355562600a2f97bb45fed5

#98092 was marked as duplicate of this issue

#98092 was marked as duplicate of this issue

#97857 was marked as duplicate of this issue

#97857 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Is it just a problem with NVidea?
I don't see anything unusual here with an AMD Radeon (See GIF)
GIF.gif

Is it just a problem with NVidea? I don't see anything unusual here with an AMD Radeon (See GIF) ![GIF.gif](https://archive.blender.org/developer/F12933616/GIF.gif)

In #96596#1325578, @mano-wii wrote:
Is it just a problem with NVidea?
I don't see anything unusual here with an AMD Radeon (See GIF)
GIF.gif

Could be. All the computers I tested it on had an RTX 3080 Ti. Just tested it on an RTX 2080 Super and that doesnt seem to cause issues, so it appears to be very specific for certain cards even within the NVidia catalog.

GPU bug 2.jpeg

GPU Bug.jpeg

> In #96596#1325578, @mano-wii wrote: > Is it just a problem with NVidea? > I don't see anything unusual here with an AMD Radeon (See GIF) > ![GIF.gif](https://archive.blender.org/developer/F12933616/GIF.gif) Could be. All the computers I tested it on had an RTX 3080 Ti. Just tested it on an RTX 2080 Super and that doesnt seem to cause issues, so it appears to be very specific for certain cards even within the NVidia catalog. ![GPU bug 2.jpeg](https://archive.blender.org/developer/F12934250/GPU_bug_2.jpeg) ![GPU Bug.jpeg](https://archive.blender.org/developer/F12934243/GPU_Bug.jpeg)
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

I can reproduce the issue with the setup listed below.

An extra note for reproducing the issue, I had to change the Factor setting on the Cast modifier which the monkey head has. If I didn't change it, I couldn't reproduce issues.

System Information
Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54
Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-19 07:26, hash: 3e16f3b3ef

I can reproduce the issue with the setup listed below. An extra note for reproducing the issue, I had to change the `Factor` setting on the `Cast` modifier which the monkey head has. If I didn't change it, I couldn't reproduce issues. **System Information** Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-19 07:26, hash: `3e16f3b3ef`
Member

Added subscribers: @kevindietrich, @lichtwerk

Added subscribers: @kevindietrich, @lichtwerk
Member

CC @kevindietrich : mind checking?

CC @kevindietrich : mind checking?
Philipp Oeser changed title from GPU Accelerated Subdivision causes problems in generated Texture Coordinate to GPU subdivision causes problems in generated Texture Coordinate 2022-04-12 16:43:27 +02:00
Member

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the playbook

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the [playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook)

The EEVEE part should be fixed with 3e25561d51. The Cycles part seems to be a bit more involved to fix.

The EEVEE part should be fixed with 3e25561d51. The Cycles part seems to be a bit more involved to fix.

Added subscriber: @AdrianoDElia

Added subscriber: @AdrianoDElia
Kévin Dietrich changed title from GPU subdivision causes problems in generated Texture Coordinate to GPU subdivision causes problems in generated Texture Coordinate with Cycles 2022-05-16 11:09:12 +02:00

Added subscribers: @egado, @ThomasDinges

Added subscribers: @egado, @ThomasDinges

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-18 16:45:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96596
No description provided.